style.css
/* ... */
.filter__filter__AVB{
	font-size: var(--fs-16);
	font-weight: var(--fw-bold);
	color: var(--cl-dark);
}
#avb-min, #avb-max{
	height: var(--input-height);
	border-radius: var(--box-radius);
	border: 2px solid var(--cl-blue-light);
	padding: 10px;
	color: var(--cl-grey);
}
#avb-min:hover, #avb-max:hover{
	border: 2px solid var(--cl-green);
	box-shadow: var(--box-shadow) var(--cl-green-light);
}
/* SORT */
.filter__sort{
	margin-top: var(--input-margin);
}
.filter__sort p{
	font-size: var(--fs-14);
	font-weight: var(--fw-bold);
	margin-bottom: 8px;
}
#sort{
	height: var(--input-height);
	width: var(--box-list-width);
	border-radius: var(--box-radius);
	border: 2px solid var(--cl-blue-light);
	padding: 10px;
	color: var(--cl-grey);
}
#sort:hover{
	border: 2px solid var(--cl-green);
	box-shadow: var(--box-shadow) var(--cl-green-light);
}
/* SHOW */
.filter__show{
	margin-top: var(--input-margin);
}
.filter__show p{
	font-size: var(--fs-14);
	font-weight: var(--fw-bold);
	margin-bottom: 8px;
}
#show_grid{
	height: var(--input-height);
}
#show_list{
	height: var(--input-height);
}
#show_grid:checked, #show_list:checked{
	background-color: red;
}
#show_grid:hover, #show_list:hover{
	border: 2px solid var(--cl-green);
	box-shadow: var(--box-shadow) var(--cl-green-light);
}
/* RESULTS */
.filter__results{
	margin-top: var(--input-margin);
}
.filter__results p{
	font-size: var(--fs-14);
	font-weight: var(--fw-bold);
	margin-bottom: 8px;
}
#page{
	height: var(--input-height);
	width: var(--box-list-width);
	border-radius: var(--box-radius);
	border: 2px solid var(--cl-blue-light);
	padding: 10px;
	color: var(--cl-grey);
}
#page:hover{
	border: 2px solid var(--cl-green);
	box-shadow: var(--box-shadow) var(--cl-green-light);
}
/* BUTTONS */
.filter__buttons{
	margin-top: var(--input-margin);
	display: flex;
	justify-content: flex-end;
	gap: 16px;
}
#btn_clear{
	width: 150px;
	height: 56px;
	border: 2px solid var(--cl-yellow);
	border-radius: var(--box-radius);
	font-weight: var(--fw-bold);
	font-size: var(--fs-16);
	color: var(--cl-yellow);
}
#btn_clear:hover{
	box-shadow: var(--box-shadow) var(--cl-yellow-shadow);
}
#btn_apply{
	width: 150px;
	height: 56px;
	border-radius: var(--box-radius);
	background-color: var(--cl-green);
	color:var(--cl-light);
	font-weight: var(--fw-bold);
	font-size: var(--fs-16);
}
#btn_apply:hover{
	box-shadow: var(--box-shadow) var(--cl-green-shadow);
}

/* ----------------------------- ✅ */
.header{
	background-color: var(--cl-light);
	display: flex;
	justify-content: space-between;
	align-items: center;

	position: fixed;
	right: 0;
	padding: 12px 10%;
	left: 0;
	margin-left: auto;
	margin-right: auto;
	z-index: 9;
}
.mobile_head{
	justify-content: center;
}
.header_sticky{
	background-color: var(--cl-red);
}
.header__filter{
	display: flex;
}
/* .header__back{

} */
.header__logo{
	font-size: var(--fs-16);
	color: var(--cl-grey);
	font-weight: bold;
	display: flex;
}
.header__user{
	display: flex;
	background-color: var(--cl-yellow);
	border-radius: var(--box-radius);
	justify-content: center;
	align-items: center;
	font-size: var(--fs-34);
}

/* ----------------------------- ✅ */

.hero{
	border: 1px solid var(--cl-light);
	padding: 0 5%;
}
.main__title{
	margin: 150px 0 46px;
	font-size:var(--fs-34);
	font-weight: var(--fw-bold);
	line-height: var(--fl-126);
	color: var(--cl-dark);
	width: 75%;
}

/* -----------------------------  ✅ */
.tag{
	display: flex;
	padding: 0 5%;
}
.tag__info{
	display: flex;
	justify-content: space-between;
}
.tag__title{
	color: var(--cl-grey); 
	font-size: var(--fs-14);
	font-weight: bold;
}
.tag__clear{
	cursor: pointer;
	color: var(--cl-green);
	font-size: var(--fs-14);
	font-weight: bold;
}
.tag__clear:hover{
	text-decoration: underline;
	
}
.tag__cont{
	display: flex;
	flex-wrap: wrap;
	margin: 20px 0;
}
.tag__cont_tag{
	background-color: var(--cl-green);
	border-radius: var(--box-radius);
	font-size: var(--fs-12);
	padding: 4px 12px;
	color: white;
	margin-right: 8px;
	margin-bottom: 8px;
}

/* ----------------------------- ✅ */
.random{
	padding: 0 5%;
	height: 40px;
	position: relative;
}
.random button{
	height: 90px;
	width: var(--box-list-width);
	border-radius: var(--box-radius);
	background-color: var(--cl-yellow);
	font: var(--cl-dark);
	font-weight: var(--fw-bold);
	font-size: var(--fs-22);
	color:var(--cl-dark);
	position: absolute;
	margin-left: auto;
	margin-right: auto;
	left: 0;
	right: 0;
	text-align: left;
	padding-left: 20px;
	transition: .2s ease-in-out;
}
.random button:hover{
	box-shadow: var(--box-shadow) var(--cl-yellow-shadow);
	color: var(--cl-light);
}
.random button:hover .btn_random_beer_icon{
	bottom: 30px;
}
.btn_random_beer{
	position: absolute;
	bottom: 0;
	right: 10px;
	width: 130px;
	height: 120px;
	font-size: 130px;
	clip-path: inset(0px 0px 0px 0px);
}
.btn_random_beer_icon{
	position: relative;
	bottom: 20px;
	transition: .2s ease-in-out;
}

/* ----------------------------- ✅ */
.card{
	background-color: var(--cl-green-light);
	border-radius: var(--box-radius);
	padding-top: 120px;
	padding-bottom: 40px;
}
.card__cont{
	padding: 0 5%;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	gap: 12px;
}
/* GRID */
.card__cont__card{
	background-color: var(--cl-green);
	border-radius: var(--box-radius);
	margin-bottom: 40px;
	width: 175px;
	display: flex;
	height: 190px;
	transition: .1s ease-in-out;
	cursor: pointer;
}
.card__cont__card:hover{
	box-shadow: var(--box-shadow) var(--cl-green-shadow);
}
.card__cont__card:hover .card__cont__card__image{
	transform: translateX(-25px);
}
.card__cont__card__id{
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	width: 100%;
	position: relative;
}
.card__cont__card__botom{
	background-color: var(--cl-light);
	border-radius: 0 0 var(--box-radius) var(--box-radius);
	width: 100%;
	height: 70px;
	padding: 12px;
	position: absolute;
	bottom: 0;
}
/* ... */

